--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "db": {
+    "gearHost": "server=den1.mysql5.gear.host;port=3306;database=amazen3; user id=amazen3;password=Password123!"
   }
 }
